# thormotion

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  cargo.toml  devices.csv  messages.csv  pyproject.toml  rustfmt.toml
.github/workflows/: ci.yml  maturin-build.yml  maturin-publish.yml  maturin-release.yml  maturin-test.yml  maturin.yml  maturin_build.yml  pymodule.yml  pypi-publish.yml  release.yml
src/: device_enumeration.rs  devices.rs  enumerate.rs  env.rs  error.rs  hardware_info.rs  lib.rs  macros.rs  messages.rs  traits.rs
src/devices/: KDC101.rs  device_manager.rs  hardware_info.rs  kdc101.rs  mod.rs  thorlabs_device_primitive.rs  usb_device_primitive.rs  utils.rs
src/devices/usb_primitive/: communicator.rs  mod.rs  serial_port.rs  status.rs
src/documentation/: get_status.md  is_settled.md  new.md  open.md  stop.md
src/enumeration/: enumerate.rs  mod.rs  usb_device_primitive.rs
src/error/: cmd.rs  mod.rs  sn.rs  usb.rs
src/errors/: error_conversions.rs  error_types.rs  mod.rs
src/functions/: channel_enable_state.rs  home.rs  identify.rs  is_settled.rs  mod.rs  move_absolute.rs  move_relative.rs  status_bits.rs  status_update.rs  stop.rs  update_messages.rs
src/messages/: all_messages.rs  channel.rs  command.rs  dispatcher.rs  message_group.rs  message_map.rs  message_metadata.rs  mod.rs  proto_dispatcher.rs  provenance.rs  utils.rs
src/traits/: chan_enable_state.rs  channel_enable_state.rs  check_serial_number.rs  hub.rs  message_traits.rs  mod.rs  motor.rs  thorlabs_device.rs  unit_conversion.rs
templates/: acceleration_conversion.rs  channel_enable_state.rs  check_serial_number.rs  definition.rs  dependencies.txt  deref.rs  display.rs  distance_conversion.rs  from.rs  home.rs  identify.rs  move_absolute.rs  new.rs  struct_definition.rs  u_status_update.rs  update_messages.rs  velocity_conversion.rs
thormacros/: Cargo.toml
thormacros/src/: lib.rs
thormotion-core/: Cargo.toml
thormotion-core/src/devices/: kdc101.rs
thormotion-core/src/devices/usb_primitive/: mod.rs
thormotion-core/src/traits/: check_serial_number.rs
thormotion-py/: Cargo.toml
thormotion-py/src/: kdc101.rs
thormotion-rs/: Cargo.toml
thormotion-rs/src/devices/: kdc101.rs  mod.rs  utils.rs
thormotion-rs/src/documentation/: close.md  estop.md  hw_start_update_messages.md  hw_stop_update_messages.md  move_absolute_from_params.md
thormotion-rs/src/functions/: channel_enable_state.rs  mod.rs  status_update.rs  stop.rs
thormotion-rs/src/traits/: mod.rs
