[package]
name = "thormotion"
version = "0.3.0"
authors = ["Amelia Fraser-Dale"]
edition = "2021"
description = "A cross-platform motion control library for Thorlabs systems, written in Rust."
readme = "README.md"
repository = "https://github.com/MillieFD/thormotion"
license = "BSD-3-Clause"
keywords = ["thorlabs", "research", "automation", "robotics", "mechatronics"]
categories = ["hardware-support", "science", "science::robotics"]
build = "build/build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "thormotion"
crate-type = ["lib"]

[features]
default = []
debug-usb = []

[dependencies]
pyo3 = { version = "0.24.0", features = ["experimental-async"] }
nusb = "0.1.13"
async-std = "1.13.0"
async-broadcast = "*"
thiserror = "2.0.12"
phf = "0.11.3"

[build-dependencies]
csv = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
phf_codegen = "0.11.3"
