# See a full list of keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "thormotion"
version = "0.3.0"
authors = ["Amelia Fraser-Dale"]
edition = "2024"
description = "A cross-platform motion control library for Thorlabs systems, written in Rust."
readme = "README.md"
repository = "https://github.com/MillieFD/thormotion"
license = "BSD-3-Clause"
keywords = ["thorlabs", "research", "automation", "robotics", "mechatronics"]
categories = ["hardware-support", "science", "science::robotics"]

[lib]
name = "thormotion"
crate-type = ["lib"]

[dependencies]
nusb = "0.1.13"
smol = "*"
async-broadcast = "*"
pyo3 = { version = "0.24.0", features = ["experimental-async"] }
rustc-hash = "*"