# See a full list of keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "thormotion"
version = "0.4.0"
authors = ["Amelia Fraser-Dale"]
edition = "2024"
description = "A cross-platform motion control library for Thorlabs systems, written in Rust."
readme = "README.md"
repository = "https://github.com/MillieFD/thormotion"
license = "BSD-3-Clause"
keywords = ["thorlabs", "research", "automation", "robotics", "mechatronics"]
categories = ["hardware-support", "science", "science::robotics"]

[lib]
name = "thormotion"
crate-type = ["lib"]

[dependencies]
nusb = "0.1.14"
smol = "2.0.2"
async-broadcast = "0.7.2"
ahash = "0.8.12"
log = "0.4.27"

[dependencies.pyo3]
version = "0.25.1"
features = ["experimental-async", "extension-module"]
