[project]
name = "thormotion"
version = "0.1.1"
description = "Python bindings for Rust library to control ThorLabs products using APT serial communication protocol."
authors = [{ name = "Amelia Fraser-Dale", email = "teacup.vet01@icloud.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

[build-system]
requires = ["maturin>=0.13"]
build-backend = "maturin"
