# See a full list of keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "thormotion-py"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
name = "thormotion"
crate-type = ["lib"]

[dependencies]
thormotion-core = { path = "../thormotion-core" }

[dependencies.pyo3]
version = "0.26"
features = ["experimental-async", "extension-module"]
